Сделал Добавил заглушки, что надо сохраняется.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="createAccMargin">10dp</dimen>
     <dimen name="buttonLoginMargin">15dp</dimen>
     <dimen name="loginFormMargin">15dp</dimen>
+    <dimen name="LoginScrollViewMargin">20dp</dimen>
 </resources>
