--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -12,7 +12,7 @@
 
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardConteiner"
+        android:id="@+id/card_view_conteiner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="@dimen/CardCornerRadius"
@@ -31,7 +31,7 @@
 
 
             <TextView
-                android:id="@+id/loginForm"
+                android:id="@+id/login_form_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -41,11 +41,11 @@
                 android:textSize="@dimen/H1" />
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/loginContainer"
+                android:id="@+id/login_text_input_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/editLogin"
+                android:id="@+id/login_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
@@ -56,13 +56,13 @@
 
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/passwordContainer"
+                android:id="@+id/password_text_input_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:passwordToggleEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/editPassword"
+                android:id="@+id/password_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:drawableStart="@drawable/lock_ic"
@@ -72,7 +72,7 @@
                 android:inputType="textPassword" />
 
                 <TextView
-                    android:id="@+id/lostLoginOrPassword"
+                    android:id="@+id/lost_login_or_password"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="@dimen/lostLoginOrPasswordMargin"
@@ -83,7 +83,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <Button
-                android:id="@+id/buttonLogin"
+                android:id="@+id/login_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/buttonLoginMargin"
@@ -91,7 +91,7 @@
                 android:text="@string/login" />
 
             <TextView
-                android:id="@+id/createAcc"
+                android:id="@+id/create_acc_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
