Урок 2. Пока сделал все по уроку.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="lightBlue">#FFC3F1FF</color>
     <color name="lightGreen">#2CFF25</color>
+    <color name="lightRed">#B3FF0000</color>
 </resources>
