--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -13,7 +13,7 @@
 
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/card_view_container"
+            android:id="@+id/registration_card_view_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/CardMargin"
